# Gestor-de-prestamos

./: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FAQ.md  GITHUB_SETUP.md  INSTALL.md  LICENSE  MANUAL_USUARIO.md  README.md  SECURITY.md  app.py  ejecutar.bat  main.py  pyproject.toml  requirements.txt  run_api.py  run_app.py  setup.py  setup_database.py  test_build.py  test_build2.py  version.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: __init__.py  cliente.py  config.py  database.py  usuario.py
src/api/: __init__.py  server.py
src/api/middleware/: __init__.py  auth.py
src/api/routes/: __init__.py  auth.py  clientes.py  pagos.py  usuarios.py
src/db/: __init__.py  connection.py  models.py
src/db/migrations/: 001_initial.sql
src/ui/: main_window.py  pages.py
src/ui_kivy/: __init__.py
src/ui_kivy/screens/: __init__.py  clientes_screen.py  home_screen.py  login_screen.py  pagos_screen.py  usuarios_screen.py
tests/: __init__.py  test_simulacion.py  verificar_db.py
